the fucking ui look like ass but it will do 4 now lol

--- a/BlackJack/MainWindow.xaml
+++ b/BlackJack/MainWindow.xaml
@@ -9,6 +9,47 @@
     <Window.Background>
         <ImageBrush ImageSource="C:\\School\\C#\\BlackJack\\BlackJack\\Image\\BackGround\\green.png"/>
     </Window.Background>
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Background" Value="Aquamarine"/>
+            <Setter Property="BorderBrush" Value="DarkCyan"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Padding" Value="10,5"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" 
+                                BorderBrush="{TemplateBinding BorderBrush}" 
+                                BorderThickness="{TemplateBinding BorderThickness}" 
+                                CornerRadius="5">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="MediumAquamarine"/>
+                    <Setter Property="BorderBrush" Value="DarkCyan"/>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" Value="LightSeaGreen"/>
+                    <Setter Property="BorderBrush" Value="DarkCyan"/>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="LightGray"/>
+                    <Setter Property="Foreground" Value="Gray"/>
+                    <Setter Property="BorderBrush" Value="Gray"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -21,19 +62,19 @@
         </Grid.RowDefinitions>
 
         <WrapPanel Name="DealerPanel" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"></WrapPanel>
-    <WrapPanel Name="ButtonPanel" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center">
-        <Button Name ="HitButton" Content="Hit" Width="100" Height="40" Margin="10"
-                Click="HitButton_Click"/>
-        <Button Name="StandButton" Content="Stand" Width="100" Height="40" Margin="10"
-                Click="StandButton_Click"/>
+        <WrapPanel Name="ButtonPanel" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center">
+            <Button Name="HitButton" Content="Hit" Width="100" Height="40" Margin="10"
+                    Click="HitButton_Click"/>
+            <Button Name="StandButton" Content="Stand" Width="100" Height="40" Margin="10"
+                    Click="StandButton_Click"/>
         </WrapPanel>
         <WrapPanel Name="RestartButton" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Name="Restart" Content="New Round" Width="100" Height="40"
-                Click="RestartButton_Click"/>
+                    Click="RestartButton_Click"/>
             <Button Name="NewGameButton" Content="New Game" Width="100" Height="40" Click="NewGameButton_Click"/>
         </WrapPanel>
         <WrapPanel Name="PlayerPanel" Grid.Column="0" Grid.Row="2"
-               HorizontalAlignment="Center" VerticalAlignment="Center"></WrapPanel>
+                   HorizontalAlignment="Center" VerticalAlignment="Center"></WrapPanel>
 
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="4" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0" Width="150">
             <StackPanel Orientation="Horizontal" Margin="10">
@@ -48,11 +89,12 @@
                 <TextBlock x:Name="CurrentBetText" FontSize="30" FontWeight="Bold"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="10,10,0,0">
-                <Button Name ="DecreaseButton" Content="-" Width="20" Height="20" Click="DecreaseBetButton_Click"/>
-                <Button Name ="IncreaseButton" Content="+" Width="20" Height="20" Click="IncreaseBetButton_Click" Margin="5,0,0,0"/>
+                <Button Name="DecreaseButton" Content="-" Width="20" Height="20" Click="DecreaseBetButton_Click"/>
+                <Button Name="IncreaseButton" Content="+" Width="20" Height="20" Click="IncreaseBetButton_Click" Margin="5,0,0,0"/>
             </StackPanel>
-            <Button Name ="BetButton" Content="Bet" Width="100" Height="40" Margin="10,10,0,0" Click="BetButton_Click"/>
+            <Button Name="BetButton" Content="Bet" Width="100" Height="40" Margin="10,10,0,0" Click="BetButton_Click"/>
         </StackPanel>
 
     </Grid>
 </Window>
+
